add css varibles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <h1>Welcome to the milestone 1 project</h1>
     <p>This is the milestone 1 project</p>
+    <p class="sub-heading-color">This is the milestone 1 project</p>
 
     <!--Bootstrap JS Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
