--- a/index.html
+++ b/index.html
@@ -4,18 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta naem="description"
+        content="Lucky Gonk IT Cafe, your number one stop for gaming needs. Perfect for casual gamers, competitive gamers, and anyone who loves gaming. Come visit us to make memories that will last a lifetime!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" Add
         commentMore actions integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Lucky Gonk | Home</title>
+
+    <!--Favicon created by Favicon.io-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 </head>
 
-<body>
-    <h1>Welcome to the milestone 1 project</h1>
-    <p>This is the milestone 1 project</p>
-    <p class="sub-heading-color">This is the milestone 1 project</p>
+<body class="d-flex flex-column min-vh-100">
+    <!--navigation-->
+    <div>Navigation</div>
+    <!--header section-->
+    <header id="hero-home" class="container">
+        <!-- section with hero image -->
+        <section class="row">
+            <!-- text-center class used to centre all text inside column -->
+            <div class="col-12 text-center">
+                <h1 class="display-4 my-4">The Lucky Gonk</h1>
+                <!-- mb-5 gives extra margin spacing under subheading -->
+                <h2 class="display-6 mb-4">Welcome to the top gaming IT cafe!</h2>
+                <!-- mb-5 gives extra margin spacing under lead text -->
+                <p class="lead mb-5">Let's create something amazing together!</p>
+            </div>
+        </section>
+    </header>
 
+    <!-- main content -->
+    <main>
+        <!--  section links to #about href in navbar -->
+        <section id="about" class="container">
+            <div class="row">
+                <!-- my-4 used to add top and bottom margin to heading -->
+                <div class="col-12 text-center my-4">
+                    <h2 class="display-5">What's on offer</h2>
+                </div>
+            </div>
+
+
+        </section>
+    </main>
+    <!-- Footer / contact section -->
+    <!-- mt-auto added to push footer to the bottom of the page -->
+    <footer class="mt-auto">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">Contact section heading</div>
+                <!-- Contact info -->
+                <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
+                <!-- Opening times -->
+                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+            </div>
+        </div>
+    </footer>
     <!--Bootstrap JS Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
@@ -24,5 +71,6 @@
     <script src="https://kit.fontawesome.com/3ab35d36b5.js" crossorigin="anonymous"></script>
 
 </body>
+
 
 </html>
