--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!--navigation-->
-    <div>Navigation</div>
+    <nav class="navbar navbar-expand-lg" data-bs-theme="light">
+        <div id="navbar" class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/images/favicon-32x32.png" alt="lucky gonk logo" class="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Coffeehouse</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Gameroom</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!--header section-->
     <header id="hero-home" class="container">
         <!-- section with hero image -->
