add and style footer content

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!--navigation-->
     <nav class="navbar navbar-expand-lg" data-bs-theme="light">
         <div id="navbar" class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/images/favicon-32x32.png" alt="lucky gonk logo" class="logo">
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo-green.png.png" alt="lucky gonk logo"
+                    class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Info</a>
+                        <a class="nav-link" href="#">Links</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Coffeehouse</a>
@@ -72,7 +72,7 @@
             <div class="row">
                 <!-- my-4 used to add top and bottom margin to heading -->
                 <div class="col-12 text-center my-4">
-                    <h2 class="display-5">What's on offer</h2>
+                    <h2 class="display-5">Links to services we offer</h2>
                 </div>
             </div>
 
@@ -81,17 +81,86 @@
     </main>
     <!-- Footer / contact section -->
     <!-- mt-auto added to push footer to the bottom of the page -->
-    <footer class="mt-auto">
-        <div class="container">
+    <footer id="contact" class="mt-auto">
+        <div class="container section">
             <div class="row justify-content-center">
-                <div class="col-12">Contact section heading</div>
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Contact Us!</h2>
+                </div>
                 <!-- Contact info -->
-                <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
-                <!-- Opening times -->
-                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact Info</h3>
+                    <address>
+                        <strong><i class="fa-solid fa-location-dot"></i> The Lucky Gonk</strong><br>
+                        420 Luckyway<br>
+                        Luckytown Avenue, 34527
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 1357908642<br>
+                        <i class="fa-solid fa-paper-plane"></i> info@luckygonk.it
+                    </p>
+                    <!-- Opening times -->
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <h3 class="sub-heading-color">Opening times</h3>
+                        <table class="table table-dark">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Day</th>
+                                    <th scope="col">Open</th>
+                                    <th scope="col">Close</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Mon</th>
+                                    <td>10am</td>
+                                    <td>6pm</td>
+
+
+                                </tr>
+                                <tr>
+                                    <th scope="row">Tue-Thur</th>
+                                    <td>10am</td>
+                                    <td>7pm</td>
+
+                                </tr>
+                                <tr>
+                                    <th scope="row">Fri-Sat</th>
+                                    <td>10.30am</td>
+                                    <td>8.30pm</td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">Sun</th>
+                                    <td colspan="2">Closed</td>
+
+                                </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="social-links my-4">
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                            aria-label="visit our Facebook page(opens in a new tab)"><i
+                                class="fa-brands fa-facebook"></i></a>
+
+                        <a href="https://www.x.com/" target="_blank" rel="noopener"
+                            aria-label="visit our X feed(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a>
+
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                            aria-label="visit our Instagram page(opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+
+                        <a href="https://www.tiktok.com/" target="_blank" rel="noopener"
+                            aria-label="visit our tiktok page(opens in a new tab)"><i
+                                class="fa-brands fa-tiktok"></i></a>
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </footer>
+
     <!--Bootstrap JS Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
