--- a/coffeehouse.html
+++ b/coffeehouse.html
@@ -32,33 +32,33 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Links</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="coffeehouse.html">Coffeehouse</a>
+                        <a class="nav-link active" aria-current="page" href="coffeehouse.html">Coffeehouse</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gameroom.html">Gameroom</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!--header section-->
-    <header id="hero-home" class="container section">
+    <header id="hero-coffee" class="container section">
         <!-- section with hero image -->
         <section class="row">
             <!-- text-center class used to centre all text inside column -->
             <div class="col-12 text-center my-5">
                 <h1 class="display-4 my-4">The Lucky Gonk</h1>
                 <!-- mb-5 gives extra margin spacing under subheading -->
-                <h2 class="display-6 mb-4">Welcome to the top gaming IT cafe!</h2>
+                <h2 class="display-6 mb-4">Welcome to the Coffeehouse!</h2>
                 <!-- mb-5 gives extra margin spacing under lead text -->
                 <p class="lead mb-5">Let's create something amazing together!</p>
             </div>
