add main content for homepage

--- a/coffeehouse.html
+++ b/coffeehouse.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link" href="index.html#links">Links</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="coffeehouse.html">Coffeehouse</a>
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="gameroom.html">Gameroom</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,10 @@
                 <!-- mb-5 gives extra margin spacing under subheading -->
                 <h2 class="display-6 mb-4">Welcome to the Coffeehouse!</h2>
                 <!-- mb-5 gives extra margin spacing under lead text -->
-                <p class="lead mb-5">Let's create something amazing together!</p>
+                <p class="lead mb-5">We know that the best gaming sessions need the perfect fuel. That's why our
+                    baristas at Lucky Gonk have crafted a coffee menu that's as legendary as your high scores. From bold
+                    espressos that give you the focus of a pro to silky-smooth lattes that warm your soul, we've got the
+                    brews that match your mood — and your game.</p>
             </div>
         </section>
     </header>
