--- a/gameroom.html
+++ b/gameroom.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link" href="index.html#links">Links</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="coffeehouse.html">Coffeehouse</a>
@@ -44,7 +44,7 @@
                         <a class="nav-link active" aria-current="page" href="gameroom.html">Gameroom</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,11 @@
                 <!-- mb-5 gives extra margin spacing under subheading -->
                 <h2 class="display-6 mb-4">Welcome to the Gameroom!</h2>
                 <!-- mb-5 gives extra margin spacing under lead text -->
-                <p class="lead mb-5">Let's create something amazing together!</p>
+                <p class="lead mb-5">Step inside and be greeted by the glow of high-performance rigs, the pulse of
+                    console battles, and the energy of a community that lives for the thrill of the game. Whether you're
+                    here to climb the leaderboard, squad up with friends, or just chill with your favorite titles, Lucky
+                    Gonk's Game Room is the ultimate hub for gamers of all levels.
+                </p>
             </div>
         </section>
     </header>
