--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link" href="#links">Links</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="coffeehouse.html">Coffeehouse</a>
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="gameroom.html">Gameroom</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -60,19 +60,70 @@
                 <!-- mb-5 gives extra margin spacing under subheading -->
                 <h2 class="display-6 mb-4">Welcome to the top gaming IT cafe!</h2>
                 <!-- mb-5 gives extra margin spacing under lead text -->
-                <p class="lead mb-5">Let's create something amazing together!</p>
+                <p class="lead mb-5">Step into a world where every pixel is an adventure, and every match is a chance to
+                    level up your luck. At Lucky Gonk IT Gaming Cafe, we're not just a place to play — we're a community
+                    where gamers, dreamers, and champions gather to create memories, forge friendships, and unleash
+                    their gaming potential. </p>
             </div>
         </section>
     </header>
 
     <!-- main content -->
     <main>
-        <!--  section links to #about href in navbar -->
-        <section id="about" class="container">
+        <!--  section links to #links href in navbar -->
+        <section id="links" class="container">
             <div class="row">
                 <!-- my-4 used to add top and bottom margin to heading -->
                 <div class="col-12 text-center">
                     <h2 class="display-5">Links to services we offer</h2>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 18.5rem;">
+                        <img src="assets/images/coffeehouse-hero.png.png" class="card-img-top"
+                            alt="People enjoying coffee in the cafe, sitting around tables">
+                        <div class="card-body">
+                            <h5 class="card-title">Coffeehouse</h5>
+                            <p class="card-text sub-heading-color">Our specialty blends are sourced from the world's top
+                                coffee regions —
+                                think of it as a quest for the ultimate flavor. Whether you're starting your day with a
+                                steaming cup of dark roast or winding down with a caramel latte while you watch your
+                                friends
+                                on the leaderboard, every sip at Lucky Gonk is a taste of victory.</p>
+                            <a href="coffeehouse.html" class="btn btn-outline-success">Go to Coffeehouse</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 18.5rem;">
+                        <img src="assets/images/game-room-hero.png.png" class="card-img-top"
+                            alt="People enjoying coffee in the cafe, sitting around tables">
+                        <div class="card-body">
+                            <h5 class="card-title">Gameroom</h5>
+                            <p class="card-text sub-heading-color">With state-of-the-art PCs, next-gen consoles, and
+                                top-tier peripherals, every session feels like a championship match. The seating? As
+                                comfy as your favorite gaming chair at home — but here, you're surrounded by a community
+                                that cheers you on every step of the way. So grab your controller, pick your game, and
+                                let the battle commence.
+                            </p>
+                            <a href="gameroom.html" class="btn btn-outline-success">Go to Gameroom</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="card" style="width: 18.5rem;">
+                        <img src="assets/images/booking-inquiry.jpg.jpg" class="card-img-top"
+                            alt="Person Using Macbook Pro on White Table">
+                        <div class="card-body">
+                            <h5 class="card-title">Booking Inquiries</h5>
+                            <p class="card-text sub-heading-color">Visit our gameroom page now and fill out the Booking
+                                Inquiry Form to lock in your spot at the ultimate gaming destination. From exclusive
+                                access to our state-of-the-art Game Room, to personalized coffee menus and snack
+                                options, Lucky Gonk brings the fun, the tech, and the energy — all you have
+                                to do is bring the crew.
+                            </p>
+                            <a href="gameroom.html" class="btn btn-outline-success">Go to Booking form</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
