add content to coffeehouse page

--- a/gameroom.html
+++ b/gameroom.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
     <!--header section-->
-    <header id="hero-game" class="container section">
+    <header id="hero-game" class="container-fluid section">
         <!-- section with hero image -->
         <section class="row">
             <!-- text-center class used to centre all text inside column -->
