--- a/coffeehouse.html
+++ b/coffeehouse.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
     <!--header section-->
-    <header id="hero-coffee" class="container section">
+    <header id="hero-coffee" class="container-fluid section">
         <!-- section with hero image -->
         <section class="row">
             <!-- text-center class used to centre all text inside column -->
@@ -70,16 +70,67 @@
 
     <!-- main content -->
     <main>
-        <!--  section links to #about href in navbar -->
-        <section id="about" class="container">
-            <div class="row">
-                <!-- my-4 used to add top and bottom margin to heading -->
-                <div class="col-12 text-center">
-                    <h2 class="display-5">Links to services we offer</h2>
+        <!--  section for menu items -->
+        <section id="drinks" class="container">
+            <h1 class="text-center">Beverages & Snacks</h1>
+            <div class="container text-center">
+                <div class="row">
+                    <div id="coffee" class="col-12 col-md-6 justify-content-around my-2">
+                        <h2>Drinks Menu</h2>
+                        <h3>Coffee</h3>
+                        <ul class="list">
+                            <li>Latte</li>
+                            <li>Americano</li>
+                            <li>Cappuccino</li>
+                            <li>Espresso</li>
+                            <li>Irish Coffee</li>
+                            <li>Macchiato</li>
+                            <li>Flat White</li>
+                        </ul>
+                        <h3>Cold drinks</h3>
+                        <ul class="list">
+                            <li>Iced coffee</li>
+                            <li>Spring water</li>
+                            <li>Monster Mango Loco</li>
+                            <li>Red Bull</li>
+                            <li>Sprite (bottled)</li>
+                            <li>Vimto (Bottled)</li>
+                            <li>Diet coke (can)</li>
+                        </ul>
+                    </div>
+                    <div id="food" class="col-12 col-md-6 my-2">
+
+                        <h2>Food Menu</h2>
+                        <h3>Hot food</h3>
+                        <ul class="list">
+                            <li>Cheese Toastie</li>
+                            <li>Sausage Roll</li>
+                            <li>Tomato Soup</li>
+                            <li>Vegatable soup</li>
+                            <li>Chicken Pasty</li>
+                            <li>Steak Pasty</li>
+                            <li>Cornish Pasty</li>
+                        </ul>
+                        <h3>Cold food</h3>
+                        <ul class="list">
+                            <li>Cheese sandwich</li>
+                            <li>Ham sandwich</li>
+                            <li>Egg mayonaise sandwich</li>
+                            <li>Chicken Salad sandwich</li>
+
+                            <li>Ready salted crisps</li>
+                            <li>Salt & vinger crisps</li>
+                            <li>Cheese and onion crisps</li>
+                            <li>Prawn Cocktail crisps</li>
+
+                            <li>Maderia cake</li>
+                            <li>Lemon cake</li>
+                            <li>Carrot cake</li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-
         </section>
     </main>
     <!-- Footer / contact section -->
