add gamesroom infomation

--- a/gameroom.html
+++ b/gameroom.html
@@ -71,12 +71,36 @@
 
     <!-- main content -->
     <main>
-        <!--  section links to #about href in navbar -->
-        <section id="about" class="container">
+        <!--  section for gamesroom -->
+        <section id="games-room" class="container">
             <div class="row">
                 <!-- my-4 used to add top and bottom margin to heading -->
                 <div class="col-12 text-center">
-                    <h2 class="display-5">Links to services we offer</h2>
+                    <h2 class="display-5">What can you play Lucky Gonk?</h2>
+                    <p>At Lucky Gonk, every game session is a chance to test your luck, win exclusive prizes, and
+                        participate in tournaments that keep your heart racing. And with our state-of-the-art equipment,
+                        comfy seating, and lightning-fast internet, you'll always be at the top of your game.
+                    </p>
+                    <p>
+                        But that's not all, we host weekly tournaments, themed game nights, and surprise
+                        challenges that test your skills and reward your passion. Want to train for esports? We've got
+                        you covered. Just looking to have a blast? Pull up a seat and let the games begin.
+                    </p>
+                    <p>
+                        Here at Lucky Gonk, you can play a range of games from steam, Epic games, and more including:
+                    </p>
+                    <ul class="list">
+                        <li>League of Legends</li>
+                        <li>World of Warcraft</li>
+                        <li>Fortnite</li>
+                        <li>Roblox</li>
+                        <li>Counter Strike 2</li>
+                        <li>Marvel Rivals</li>
+                    </ul>
+                    <p>
+                        If you wish to book the game room privately or just have a query for us, please fill in the form
+                        below so we can accomadate your request.
+                    </p>
                 </div>
             </div>
 
