add success page and style buttons

--- a/gameroom.html
+++ b/gameroom.html
@@ -87,6 +87,8 @@
                         you covered. Just looking to have a blast? Pull up a seat and let the games begin.
                     </p>
                     <p>
+                        If you wish to know more about tournaments, subscribe to our socials as we post about
+                        tournaments regularly.
                         Here at Lucky Gonk, you can play a range of games from steam, Epic games, and more including:
                     </p>
                     <ul class="list">
