checking responsive design

--- a/coffeehouse.html
+++ b/coffeehouse.html
@@ -71,10 +71,14 @@
     <!-- main content -->
     <main>
         <!--  section for menu items -->
-        <section id="drinks" class="container">
-            <h1 class="text-center">Beverages & Snacks</h1>
+        <section id="drinks" class="container section">
+            <div class="row">
+                <div class="col-12 text-center mb-2">
+                    <h1 class="display-4">Beverages & Snacks</h1>
+                </div>
+            </div>
             <div class="container text-center">
-                <div class="row">
+                <div class="row justify-content-around">
                     <div id="coffee" class="col-12 col-md-6 justify-content-around my-2">
                         <h2>Drinks Menu</h2>
                         <h3>Coffee</h3>
