--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
     <main>
         <!--  section links to #links href in navbar -->
         <section id="links" class="container">
-            <div class="row">
+            <div class="row justify-content-around">
                 <!-- my-4 used to add top and bottom margin to heading -->
                 <div class="col-12 text-center">
                     <h2 class="display-5">Links to services we offer</h2>
                 </div>
-                <div class="col-12 col-md-6 col-xl-4">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card" style="width: 18.5rem;">
                         <img src="assets/images/coffeehouse-hero.png.png" class="card-img-top"
                             alt="People enjoying coffee in the cafe, sitting around tables">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-xl-4">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card" style="width: 18.5rem;">
                         <img src="assets/images/game-room-hero.png.png" class="card-img-top"
                             alt="People enjoying coffee in the cafe, sitting around tables">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-xl-4">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card" style="width: 18.5rem;">
                         <img src="assets/images/booking-inquiry.jpg.jpg" class="card-img-top"
                             alt="Person Using Macbook Pro on White Table">
