made changes via validation

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta naem="description"
+    <meta name="description"
         content="Lucky Gonk IT Cafe, your number one stop for gaming needs. Perfect for casual gamers, competitive gamers, and anyone who loves gaming. Come visit us to make memories that will last a lifetime!">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" Add
-        commentMore actions integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-        crossorigin="anonymous">
+    <!--credit: Bootstrap link acquired from bootstrap:https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" actions
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lucky Gonk | Home</title>
 
-    <!--Favicon created by Favicon.io-->
+    <!--Favicon created by Favicon.io
+    favicon image created in chat GPT using the prompt: create a logo for a company called Lucky gonk It Cafe with the color green https://chatgpt.com/library-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 </head>
+
+<!--credit: template nav section taken from bootstrap-https://getbootstrap.com/docs/5.3/components/navbar/ &
+image created in chat GPT using the prompt: create a logo for a company called Lucky gonk It Cafe with the color green -->
 
 <body class="d-flex flex-column min-vh-100">
     <!--navigation-->
@@ -50,16 +54,20 @@
             </div>
         </div>
     </nav>
-    <!--header section-->
+    <!--header section credit: template columns sourced from bootstrap-
+    https://getbootstrap.com/docs/5.3/layout/columns/ and then modified to suit the project-->
     <header id="hero-home" class="container-fluid section">
-        <!-- section with hero image -->
+        <!-- section with hero image-->
+        <!--credit: image created in chat GPT SORA using the prompt:
+realistic image of people inside an cafe https://sora.chatgpt.com/library-->
         <section class="row">
             <!-- text-center class used to centre all text inside column -->
             <div class="col-12 text-center my-5">
                 <h1 class="display-4 my-4">The Lucky Gonk</h1>
-                <!-- mb-5 gives extra margin spacing under subheading -->
+                <!-- mb-4 gives extra margin spacing under subheading -->
                 <h2 class="display-6 mb-4">Welcome to the top gaming IT cafe!</h2>
-                <!-- mb-5 gives extra margin spacing under lead text -->
+                <!-- mb-5 gives extra margin spacing under lead text 
+                 credit: text written by chat GPT using the prompt-give me an interesting promotional speech for a company called lucky gonk gaming cafe https://chatgpt.com/library-->
                 <p class="lead mb-5">Step into a world where every pixel is an adventure, and every match is a chance to
                     level up your luck. At Lucky Gonk IT Gaming Cafe, we're not just a place to play — we're a community
                     where gamers, dreamers, and champions gather to create memories, forge friendships, and unleash
@@ -68,15 +76,21 @@
         </section>
     </header>
 
-    <!-- main content -->
+    <!--main content-->
     <main>
-        <!--  section links to #links href in navbar -->
+        <!--section links to #links href in navbar -->
         <section id="links" class="container">
             <div class="row justify-content-around">
-                <!-- my-4 used to add top and bottom margin to heading -->
+                <!-- my-4 used to add top and bottom margin to heading-->
+                <!--credit: template card elements taken from bootstrap 
+                 https://getbootstrap.com/docs/5.3/components/card/ and modified to suit the project-->
+                <!--Credit: template button elements taken from bootstrap 
+                 https://getbootstrap.com/docs/5.3/components/buttons/ and modified to suit the project-->
                 <div class="col-12 text-center">
                     <h2 class="display-5">Links to services we offer</h2>
                 </div>
+                <!--credit: image created in chat GPT SORA using the prompt: 
+                    realistic image of people inside an cafe https://sora.chatgpt.com/library-->
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card" style="width: 18.5rem;">
                         <img src="assets/images/coffeehouse-hero.png.png" class="card-img-top"
@@ -93,6 +107,8 @@
                         </div>
                     </div>
                 </div>
+                <!--credit: image created in chat GPT SORA using the prompt: 
+                    realistic image of people inside an IT cafe https://sora.chatgpt.com/library-->
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card" style="width: 18.5rem;">
                         <img src="assets/images/game-room-hero.png.png" class="card-img-top"
@@ -109,12 +125,14 @@
                         </div>
                     </div>
                 </div>
+                <!--Image and alt for card sourced from pexels.com made by cottonbro studio-->
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card" style="width: 18.5rem;">
                         <img src="assets/images/booking-inquiry.jpg.jpg" class="card-img-top"
                             alt="Person Using Macbook Pro on White Table">
                         <div class="card-body">
                             <h5 class="card-title">Booking Inquiries</h5>
+                            <!--credit: text created in chat GPT using the prompt: give me an interesting promotional speech for booking inquiry form at the lucky gonk IT cafe https://chatgpt.com/library-->
                             <p class="card-text sub-heading-color">Visit our gameroom page now and fill out the Booking
                                 Inquiry Form to lock in your spot at the ultimate gaming destination. From exclusive
                                 access to our state-of-the-art Game Room, to personalized coffee menus and snack
@@ -131,14 +149,17 @@
         </section>
     </main>
     <!-- Footer / contact section -->
-    <!-- mt-auto added to push footer to the bottom of the page -->
+    <!-- mt-auto added to push footer to the bottom of the page 
+     credit: Classes from code-institute-boardwalk games-adding the contact details video
+     https://learn.codeinstitute.net/courses/course-v1:CodeInstitute+BG+2/courseware/21d4dc3fa8f0407a8359ceb1d6fc0c51/2fc50cd9de0e4c90b9f1a232e4eb1454/?child=first-->
     <footer id="contact" class="mt-auto">
         <div class="container section">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
-                    <h2 class="display-6">Contact Us!</h2>
+                    <h2 class="display-6">How to Contact Us!</h2>
                 </div>
                 <!-- Contact info -->
+                <!--icons were sourced by font-awesome https://fontawesome.com/kits/3ab35d36b5/icons and styled to suit project-->
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact Info</h3>
                     <address>
@@ -214,9 +235,11 @@
     </footer>
 
     <!--Bootstrap JS Script-->
+    <!--credit: Bootstrap link acquired from bootstrap:https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
         </script>
+    <!--credit: font awesome script link acquired from font-awesome https://fontawesome.com/kits/3ab35d36b5/setup -->
     <!--Font awesome Script-->
     <script src="https://kit.fontawesome.com/3ab35d36b5.js" crossorigin="anonymous"></script>
 
