--- a/coffeehouse.html
+++ b/coffeehouse.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--All credits from header and footer as the same as index.html-->
+<!--only hero image in header and main content require different accredits-->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta naem="description"
+    <meta name="description"
         content="Lucky Gonk IT Cafe, your number one stop for gaming needs. Perfect for casual gamers, competitive gamers, and anyone who loves gaming. Come visit us to make memories that will last a lifetime!">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" Add
-        commentMore actions integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lucky Gonk | Home</title>
 
@@ -51,6 +52,8 @@
         </div>
     </nav>
     <!--header section-->
+    <!--Image created in chat GPT SORA using the prompt:
+realistic image of people inside an cafe https://sora.chatgpt.com/library-->-->
     <header id="hero-coffee" class="container-fluid section">
         <!-- section with hero image -->
         <section class="row">
@@ -69,6 +72,7 @@
     </header>
 
     <!-- main content -->
+    <!--credit: Template for lists from mdn web docs was used then modified to suit this project https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/li-->
     <main>
         <!--  section for menu items -->
         <section id="drinks" class="container section">
