--- a/gameroom.html
+++ b/gameroom.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--All credits from header and footer as the same as index.html-->
+<!--only hero image in header and main content require different accredits-->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta naem="description"
+    <meta name="description"
         content="Lucky Gonk IT Cafe, your number one stop for gaming needs. Perfect for casual gamers, competitive gamers, and anyone who loves gaming. Come visit us to make memories that will last a lifetime!">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" Add
-        commentMore actions integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lucky Gonk | Home</title>
 
@@ -50,6 +51,7 @@
             </div>
         </div>
     </nav>
+    <!-- Image created in chat GPT SORA using the prompt: realistic image of people inside an IT cafe https://sora.chatgpt.com/library-->
     <!--header section-->
     <header id="hero-game" class="container-fluid section">
         <!-- section with hero image -->
@@ -76,6 +78,7 @@
             <div class="row">
                 <!-- my-4 used to add top and bottom margin to heading -->
                 <div class="col-12 text-center">
+                    <!-- some text in paragraph elements created in chat GPT using the prompt-give me an interesting promotional speech for a company called lucky gonk IT gaming cafe.https://chatgpt.com/library-->
                     <h2 class="display-5">What can you play Lucky Gonk?</h2>
                     <p>At Lucky Gonk, every game session is a chance to test your luck, win exclusive prizes, and
                         participate in tournaments that keep your heart racing. And with our state-of-the-art equipment,
@@ -106,11 +109,13 @@
                 </div>
             </div>
         </section>
+        <!--Credit: form template sourced from bootstrap https://getbootstrap.com/docs/5.3/forms/form-control/-->
         <section id="booking-form" class="container-fluid">
-            <form action="Success.html" post="GET">
+            <h2 class="hidden">Booking inquiry form </h2>
+            <form action="Success.html" method="GET">
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-2">
-                        <label for="full name" class="form-label">Full Name</label>
+                        <label for="fullname" class="form-label">Full Name</label>
                         <input class="form-control" id="fullname" name="fullname" type="text" required>
                     </div>
                     <div class="col-12 col-lg-6 mb-2">
