--- a/success.html
+++ b/success.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--All credits from header and footer as the same as index.html-->
+<!--only main content require different accredits-->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta naem="description"
+    <meta name="description"
         content="Lucky Gonk IT Cafe, your number one stop for gaming needs. Perfect for casual gamers, competitive gamers, and anyone who loves gaming. Come visit us to make memories that will last a lifetime!">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" Add
-        commentMore actions integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lucky Gonk | Home</title>
 
@@ -51,6 +52,8 @@
         </div>
     </nav>
 
+    <!--credit: code snippet taken from code-institute boardwalk games form success page and button styling video-->
+    <!--https://learn.codeinstitute.net/courses/course-v1:CodeInstitute+BG+2/courseware/21d4dc3fa8f0407a8359ceb1d6fc0c51/9751f87dfb4d40119d117115f2376f88/-->
     <!-- success message for users who successfully submit a form -->
     <main id="success" class="container section text-center">
         <div class="row justify-content-center">
