correcting 405 error message

--- a/gameroom.html
+++ b/gameroom.html
@@ -112,7 +112,7 @@
         <!--Credit: form template sourced from bootstrap https://getbootstrap.com/docs/5.3/forms/form-control/-->
         <section id="booking-form" class="container-fluid">
             <h2 class="hidden">Booking inquiry form </h2>
-            <form action="success.html" method="POST">
+            <form action="success.html" method="get">
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-2">
                         <label for="fullname" class="form-label">Full Name</label>
